--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -23,13 +23,15 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Configure CMake
+      working-directory: ${{github.workspace}}/tests
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/tests/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -S . -B build
 
     - name: Build
+      working-directory: ${{github.workspace}}/tests
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/tests/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build build --config ${{env.BUILD_TYPE}}
 
     - name: Test
       working-directory: ${{github.workspace}}/tests/build
