--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,13 +9,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include(FetchContent)
 FetchContent_Declare(
         googletest
-        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+        URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
 )
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
-
-enable_testing()
 
 add_executable(
         MyGraphTest
@@ -32,25 +30,5 @@ target_link_libraries(
 include(GoogleTest)
 gtest_discover_tests(MyGraphTest)
 
-
-
-
-
-
-
-
-
-## Include the directories where your header files reside
-#include_directories(${GTEST_INCLUDE_DIRS})
-#
-## Add your test source files
-#add_executable(MyGraphTest graphTest.cpp ../src/Graph.cpp MatrixTest.cpp ../src/Matrix.cpp)
-#
-## Link your test target with Google Test and any other libraries
-#target_link_libraries(MyGraphTest gtest gtest_main)
-#
-## Find and configure Google Test
-#find_package(GTest REQUIRED)
-#
-## Register your test
-#add_test(NAME MyGraphTest COMMAND MyGraphTest)
+enable_testing()
+add_test(NAME MyGraphTest COMMAND MyGraphTest)
