--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/tests/build
 
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}} -V --rerun-failed --output-on-failure
