--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -32,3 +32,27 @@ jobs:
       working-directory: ${{github.workspace}}/tests/build
 
       run: ctest -C ${{env.BUILD_TYPE}} -V
+
+
+  deploy:
+    needs: [build]
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}
+
+        run: cmake -S . -B build
+
+      - name: Build
+        working-directory: ${{github.workspace}}
+
+        run: cmake --build build --config ${{env.BUILD_TYPE}}
+
+      - name: Test
+        working-directory: ${{github.workspace}}/build
+
+        run: ./ggraph --run-supra-random-graph
