--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -34,7 +34,7 @@ jobs:
       run: ctest -C ${{env.BUILD_TYPE}} -V
 
 
-  deploy:
+  run-supra-random-graph:
     needs: [build]
 
     runs-on: ubuntu-latest
