--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -52,7 +52,7 @@ jobs:
 
         run: cmake --build build --config ${{env.BUILD_TYPE}}
 
-      - name: Test
+      - name: Run
         working-directory: ${{github.workspace}}/build
 
         run: ./ggraph --run-supra-random-graph
