--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -37,7 +37,7 @@ jobs:
       run: ctest -C ${{env.BUILD_TYPE}} -V
 
 
-  run-supra-random-graph:
+  run-little-n-little-p:
     needs: [build]
 
     runs-on: ubuntu-latest
@@ -58,4 +58,127 @@ jobs:
       - name: Run
         working-directory: ${{github.workspace}}/build
 
-        run: ./ggraph --run-supra-random-graph
+        run: ./ggraph -n 100 -p 0.03 -o little_n_little_p.gml
+
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: little_n_little_p
+          path: little_n_little_p.gml
+
+  run-little-n-big-p:
+    needs: [build]
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}
+
+        run: cmake -S . -B build
+
+      - name: Build
+        working-directory: ${{github.workspace}}
+
+        run: cmake --build build --config ${{env.BUILD_TYPE}}
+
+      - name: Run
+        working-directory: ${{github.workspace}}/build
+
+        run: ./ggraph -n 100 -p 0.3 -o little_n_big_p.gml
+
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: little_n_big_p
+          path: little_n_big_p.gml
+
+
+  run-big-n-little-p:
+    needs: [build]
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}
+
+        run: cmake -S . -B build
+
+      - name: Build
+        working-directory: ${{github.workspace}}
+
+        run: cmake --build build --config ${{env.BUILD_TYPE}}
+
+      - name: Run
+        working-directory: ${{github.workspace}}/build
+
+        run: ./ggraph -n 1000 -p 0.001 -o big_n_little_p.gml
+
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: big_n_little_p
+          path: big_n_little_p.gml
+
+  run-big-n-big-p:
+    needs: [build]
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}
+
+        run: cmake -S . -B build
+
+      - name: Build
+        working-directory: ${{github.workspace}}
+
+        run: cmake --build build --config ${{env.BUILD_TYPE}}
+
+      - name: Run
+        working-directory: ${{github.workspace}}/build
+
+        run: ./ggraph -n 1000 -p 0.3 -o big_n_big_p.gml
+
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: big_n_big_p
+          path: big_n_big_p.gml
+
+  run-middle-n-middle-p:
+    needs: [build]
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}
+
+        run: cmake -S . -B build
+
+      - name: Build
+        working-directory: ${{github.workspace}}
+
+        run: cmake --build build --config ${{env.BUILD_TYPE}}
+
+      - name: Run
+        working-directory: ${{github.workspace}}/build
+
+        run: ./ggraph -n 500 -p 0.01 -o middle_n_middle_p.gml
+
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: middle_n_middle_p
+          path: middle_n_middle_p.gml
