--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -148,17 +148,17 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Configure CMake
-        working-directory: ${{github.workspace}}/tests
+        working-directory: ${{github.workspace}}
 
         run: cmake -S . -B build
 
       - name: Build
-        working-directory: ${{github.workspace}}/tests
+        working-directory: ${{github.workspace}}
 
         run: cmake --build build --config ${{env.BUILD_TYPE}}
 
       - name: run bfs
-        working-directory: ${{github.workspace}}/tests/build
+        working-directory: ${{github.workspace}}/build
 
         run: ./ggraph -algo bfs -n 100 -p 0.03
 
@@ -171,16 +171,16 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Configure CMake
-        working-directory: ${{github.workspace}}/tests
+        working-directory: ${{github.workspace}}
 
         run: cmake -S . -B build
 
       - name: Build
-        working-directory: ${{github.workspace}}/tests
+        working-directory: ${{github.workspace}}
 
         run: cmake --build build --config ${{env.BUILD_TYPE}}
 
       - name: run dfs
-        working-directory: ${{github.workspace}}/tests/build
+        working-directory: ${{github.workspace}}/build
 
         run: ./ggraph -algo dfs -n 100 -p 0.03
