--- a/.github/workflows/Graph-list.yml
+++ b/.github/workflows/Graph-list.yml
@@ -146,7 +146,7 @@ jobs:
         uses: actions/download-artifact@v3.0.2
         with:
           name: graph-results
-          path: ${{github.workspace}}
+          path: ${{github.workspace}}/graph-list-results
 
       - name: Commit file
         working-directory: ${{github.workspace}}
