--- a/.github/workflows/Graph-list.yml
+++ b/.github/workflows/Graph-list.yml
@@ -160,7 +160,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: result-matrix
+          branch: result-list
           force: true
 
 
