--- a/.github/workflows/Graph-matrix.yml
+++ b/.github/workflows/Graph-matrix.yml
@@ -209,3 +209,31 @@ jobs:
         working-directory: ${{github.workspace}}/build
 
         run: ./ggraph matrix --algo dfs -n 10000 -p 0.002 --debug
+
+  bipartite-algo:
+    needs: [ build ]
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Configure CMake
+        working-directory: ${{github.workspace}}
+
+        run: cmake -S . -B build
+
+      - name: Build
+        working-directory: ${{github.workspace}}
+
+        run: cmake --build build --config ${{env.BUILD_TYPE}}
+
+      - name: run bipartite (not)
+        working-directory: ${{github.workspace}}/build
+
+        run: ./ggraph matrix --algo bipartite --debug
+
+      - name: run bipartite (yes)
+        working-directory: ${{github.workspace}}/build
+
+        run: ./ggraph matrix --algo bipartite -t bipartite --debug
